[PeopleWorks] UPB4860 Gen3 MC03 V5 Rework/AXT CAMC-QI UC LAN/AXL(Library)/Dynamic Link/DAXA.h

typedef DWORD    PASCAL EXPORT funcAxaInfoIsAIOModule(DWORD *upStatus);
typedef DWORD    PASCAL EXPORT funcAxaInfoGetModuleNo(long lBoardNo, long lModulePos, long *lpModuleNo);
typedef DWORD    PASCAL EXPORT funcAxaInfoGetModuleCount(long *lpModuleCount);
typedef DWORD    PASCAL EXPORT funcAxaInfoGetInputCount(long lModuleNo, long *lpCount);
typedef DWORD    PASCAL EXPORT funcAxaInfoGetOutputCount(long lModuleNo, long *lpCount);
typedef DWORD    PASCAL EXPORT funcAxaInfoGetChannelNoOfModuleNo(long lModuleNo, long *lpChannelNo);
typedef DWORD    PASCAL EXPORT funcAxaInfoGetChannelNoAdcOfModuleNo(long lModuleNo, long *lpChannelNo);
typedef DWORD    PASCAL EXPORT funcAxaInfoGetChannelNoDacOfModuleNo(long lModuleNo, long *lpChannelNo);
typedef DWORD    PASCAL EXPORT funcAxaInfoGetModule(long lModuleNo, long *lpBoardNo, long *lpModulePos, DWORD *upModuleID);
typedef DWORD    PASCAL EXPORT funcAxaInfoGetModuleStatus(long lModuleNo);
typedef DWORD    PASCAL EXPORT funcAxaiInfoGetModuleNoOfChannelNo(long lChannelNo, long *lpModuleNo);
typedef DWORD    PASCAL EXPORT funcAxaiInfoGetChannelCount(long *lpChannelCount);
typedef DWORD    PASCAL EXPORT funcAxaiEventSetChannel(long lChannelNo, HWND hWnd, DWORD uMesssage, AXT_EVENT_PROC pProc, HANDLE *pEvent);
typedef DWORD    PASCAL EXPORT funcAxaiEventSetChannelEnable(long lChannelNo, DWORD uUse);
typedef DWORD    PASCAL EXPORT funcAxaiEventGetChannelEnable(long lChannelNo, DWORD *upUse);
typedef DWORD    PASCAL EXPORT funcAxaiEventSetMultiChannelEnable(long lSize, long *lpChannelNo, DWORD uUse);
typedef DWORD    PASCAL EXPORT funcAxaiEventSetChannelMask(long lChannelNo, DWORD uMask);
typedef DWORD    PASCAL EXPORT funcAxaiEventGetChannelMask(long lChannelNo, DWORD *upMask);
typedef DWORD    PASCAL EXPORT funcAxaiEventSetMultiChannelMask(long lSize, long *lpChannelNo, DWORD uMask);
typedef DWORD    PASCAL EXPORT funcAxaiEventRead(long *lpChannelNo, DWORD *upMode);
typedef DWORD    PASCAL EXPORT funcAxaiInterruptSetModuleMask(long lModuleNo, DWORD uMask);
typedef DWORD    PASCAL EXPORT funcAxaiInterruptGetModuleMask(long lModuleNo, DWORD *upMask);
typedef DWORD    PASCAL EXPORT funcAxaiSetRange(long lChannelNo, double dMinVolt, double dMaxVolt);
typedef DWORD    PASCAL EXPORT funcAxaiGetRange(long lChannelNo, double *dpMinVolt, double *dpMaxVolt);
typedef DWORD    PASCAL EXPORT funcAxaiSetRangeModule(long lModuleNo, double dMinVolt, double dMaxVolt);
typedef DWORD    PASCAL EXPORT funcAxaiGetRangeModule(long lModuleNo, double *dMinVolt, double *dMaxVolt);
typedef DWORD    PASCAL EXPORT funcAxaiSetMultiRange(long lSize, long *lpChannelNo, double dMinVolt, double dMaxVolt);
typedef DWORD    PASCAL EXPORT funcAxaiSetTriggerMode(long lModuleNo, DWORD uTriggerMode);
typedef DWORD    PASCAL EXPORT funcAxaiGetTriggerMode(long lModuleNo, DWORD *upTriggerMode);
typedef DWORD    PASCAL EXPORT funcAxaiSetModuleOffsetValue(long lModuleNo, double dMiliVolt);
 
typedef DWORD    PASCAL EXPORT funcAxaiGetModuleOffsetValue(long lModuleNo, double *dpMiliVolt);
 
typedef DWORD    PASCAL EXPORT funcAxaiSwReadVoltage(long lChannelNo, double *dpVolt);
typedef DWORD    PASCAL EXPORT funcAxaiSwReadDigit(long lChannelNo, DWORD *upDigit);
typedef DWORD    PASCAL EXPORT funcAxaiSwReadMultiVoltage(long lSize, long *lpChannelNo, double *dpVolt);
typedef DWORD    PASCAL EXPORT funcAxaiSwReadMultiDigit(long lSize, long *lpChannelNo, DWORD *upDigit);
typedef DWORD    PASCAL EXPORT funcAxaiHwSetMultiAccess(long lSize, long *lpChannelNo, long *lpWordSize);
typedef DWORD    PASCAL EXPORT funcAxaiHwStartMultiAccess(double *dpBuffer);
typedef DWORD    PASCAL EXPORT funcAxaiHwSetSampleFreq(long lModuleNo, double dSampleFreq);
typedef DWORD    PASCAL EXPORT funcAxaiHwGetSampleFreq(long lModuleNo, double *dpSampleFreq);
typedef DWORD    PASCAL EXPORT funcAxaiHwSetSamplePeriod(long lModuleNo, double dSamplePeriod);
typedef DWORD    PASCAL EXPORT funcAxaiHwGetSamplePeriod(long lModuleNo, double *dpSamplePeriod);
typedef DWORD    PASCAL EXPORT funcAxaiHwSetBufferOverflowMode(long lChannelNo, DWORD uFullMode);
typedef DWORD    PASCAL EXPORT funcAxaiHwGetBufferOverflowMode(long lChannelNo, DWORD *upFullMode);
typedef DWORD    PASCAL EXPORT funcAxaiHwSetMultiBufferOverflowMode(long lSize, long *lpChannelNo, DWORD uFullMode);
typedef DWORD    PASCAL EXPORT funcAxaiHwSetLimit(long lChannelNo, long lLowLimit, long lUpLimit);
typedef DWORD    PASCAL EXPORT funcAxaiHwGetLimit(long lChannelNo, long *lpLowLimit, long *lpUpLimit);
typedef DWORD    PASCAL EXPORT funcAxaiHwSetMultiLimit(long lSize, long *lpChannelNo, long lLowLimit, long lUpLimit);
typedef DWORD    PASCAL EXPORT funcAxaiHwStartMultiChannel(long lSize, long *lpChannelNo, long lBuffSize);
typedef DWORD    PASCAL EXPORT funcAxaiHwStartMultiFilter(long lSize, long *lpChannelNo, long lFilterCount, long lBuffSize);
typedef DWORD    PASCAL EXPORT funcAxaiHwStopMultiChannel(long lModuleNo);
typedef DWORD    PASCAL EXPORT funcAxaiHwReadDataLength(long lChannelNo, long *lpDataLength);
typedef DWORD    PASCAL EXPORT funcAxaiHwReadSampleVoltage(long lChannelNo, long *lpSize, double *dpVolt);
typedef DWORD    PASCAL EXPORT funcAxaiHwReadSampleDigit(long lChannelNo, long *lpsize, DWORD *upDigit);
typedef DWORD    PASCAL EXPORT funcAxaiHwIsBufferEmpty(long lChannelNo, DWORD *upEmpty);
typedef DWORD    PASCAL EXPORT funcAxaiHwIsBufferUpper(long lChannelNo, DWORD *upUpper);
typedef DWORD    PASCAL EXPORT funcAxaiHwIsBufferLower(long lChannelNo, DWORD *upLower);
typedef DWORD    PASCAL EXPORT funcAxaiExternalStartADC(long lModuleNo, long lSize, long *lpChannelPos);
typedef DWORD    PASCAL EXPORT funcAxaiExternalStopADC(long lModuleNo);
typedef DWORD    PASCAL EXPORT funcAxaiExternalReadFifoStatus(long lModuleNo, DWORD *dwpStatus);
typedef DWORD    PASCAL EXPORT funcAxaiExternalReadVoltage(long lModuleNo, long lSize, long *lpChannelPos, long lDataSize, long lBuffSize, long lStartDataPos, double *dpVolt, long *lpRetDataSize, DWORD *dwpStatus);
typedef DWORD    PASCAL EXPORT funcAxaoInfoGetModuleNoOfChannelNo(long lChannelNo, long *lpModuleNo);
typedef DWORD    PASCAL EXPORT funcAxaoInfoGetChannelCount(long *lpChannelCount);
typedef DWORD    PASCAL EXPORT funcAxaoSetRange(long lChannelNo, double dMinVolt, double dMaxVolt);
typedef DWORD    PASCAL EXPORT funcAxaoGetRange(long lChannelNo, double *dpMinVolt, double *dpMaxVolt);
typedef DWORD    PASCAL EXPORT funcAxaoSetMultiRange(long lSize, long *lpChannelNo, double dMinVolt, double dMaxVolt);
typedef DWORD    PASCAL EXPORT funcAxaoWriteVoltage(long lChannelNo, double dVolt);
typedef DWORD    PASCAL EXPORT funcAxaoWriteMultiVoltage(long lSize, long *lpChannelNo, double *dpVolt);
typedef DWORD    PASCAL EXPORT funcAxaoReadVoltage(long lChannelNo, double *dpVolt);
typedef DWORD    PASCAL EXPORT funcAxaoReadMultiVoltage(long lSize, long *lpChannelNo, double *dpVolt);
//---------------------------------------------------------//
extern funcAxaInfoIsAIOModule                   *AxaInfoIsAIOModule;
extern funcAxaInfoGetModuleNo                   *AxaInfoGetModuleNo;
extern funcAxaInfoGetModuleCount                *AxaInfoGetModuleCount;
extern funcAxaInfoGetInputCount                 *AxaInfoGetInputCount;
extern funcAxaInfoGetOutputCount                *AxaInfoGetOutputCount;
extern funcAxaInfoGetChannelNoOfModuleNo        *AxaInfoGetChannelNoOfModuleNo;
extern funcAxaInfoGetChannelNoAdcOfModuleNo     *AxaInfoGetChannelNoAdcOfModuleNo;
extern funcAxaInfoGetChannelNoDacOfModuleNo     *AxaInfoGetChannelNoDacOfModuleNo;
extern funcAxaInfoGetModule                     *AxaInfoGetModule;
extern funcAxaInfoGetModuleStatus               *AxaInfoGetModuleStatus;
extern funcAxaiInfoGetModuleNoOfChannelNo       *AxaiInfoGetModuleNoOfChannelNo;
extern funcAxaiInfoGetChannelCount              *AxaiInfoGetChannelCount;
extern funcAxaiEventSetChannel                  *AxaiEventSetChannel;
extern funcAxaiEventSetChannelEnable            *AxaiEventSetChannelEnable;
extern funcAxaiEventGetChannelEnable            *AxaiEventGetChannelEnable;
extern funcAxaiEventSetMultiChannelEnable       *AxaiEventSetMultiChannelEnable;
extern funcAxaiEventSetChannelMask              *AxaiEventSetChannelMask;
extern funcAxaiEventGetChannelMask              *AxaiEventGetChannelMask;
extern funcAxaiEventSetMultiChannelMask         *AxaiEventSetMultiChannelMask;
extern funcAxaiEventRead                        *AxaiEventRead;
extern funcAxaiInterruptSetModuleMask           *AxaiInterruptSetModuleMask;
extern funcAxaiInterruptGetModuleMask           *AxaiInterruptGetModuleMask;
extern funcAxaiSetRange                         *AxaiSetRange;
extern funcAxaiGetRange                         *AxaiGetRange;
extern funcAxaiSetRangeModule                   *AxaiSetRangeModule;
extern funcAxaiGetRangeModule                   *AxaiGetRangeModule;
extern funcAxaiSetMultiRange                    *AxaiSetMultiRange;
extern funcAxaiSetTriggerMode                   *AxaiSetTriggerMode;
extern funcAxaiGetTriggerMode                   *AxaiGetTriggerMode;
extern funcAxaiSetModuleOffsetValue             *AxaiSetModuleOffsetValue;
extern funcAxaiGetModuleOffsetValue             *AxaiGetModuleOffsetValue;
extern funcAxaiSwReadVoltage                    *AxaiSwReadVoltage;
extern funcAxaiSwReadDigit                      *AxaiSwReadDigit;
extern funcAxaiSwReadMultiVoltage               *AxaiSwReadMultiVoltage;
extern funcAxaiSwReadMultiDigit                 *AxaiSwReadMultiDigit;
extern funcAxaiHwSetMultiAccess                 *AxaiHwSetMultiAccess;
extern funcAxaiHwStartMultiAccess               *AxaiHwStartMultiAccess;
extern funcAxaiHwSetSampleFreq                  *AxaiHwSetSampleFreq;
extern funcAxaiHwGetSampleFreq                  *AxaiHwGetSampleFreq;
extern funcAxaiHwSetSamplePeriod                *AxaiHwSetSamplePeriod;
extern funcAxaiHwGetSamplePeriod                *AxaiHwGetSamplePeriod;
extern funcAxaiHwSetBufferOverflowMode          *AxaiHwSetBufferOverflowMode;
extern funcAxaiHwGetBufferOverflowMode          *AxaiHwGetBufferOverflowMode;
extern funcAxaiHwSetMultiBufferOverflowMode     *AxaiHwSetMultiBufferOverflowMode;
extern funcAxaiHwSetLimit                       *AxaiHwSetLimit;
extern funcAxaiHwGetLimit                       *AxaiHwGetLimit;
extern funcAxaiHwSetMultiLimit                  *AxaiHwSetMultiLimit;
extern funcAxaiHwStartMultiChannel              *AxaiHwStartMultiChannel;
extern funcAxaiHwStartMultiFilter               *AxaiHwStartMultiFilter;
extern funcAxaiHwStopMultiChannel               *AxaiHwStopMultiChannel;
extern funcAxaiHwReadDataLength                 *AxaiHwReadDataLength;
extern funcAxaiHwReadSampleVoltage              *AxaiHwReadSampleVoltage;
extern funcAxaiHwReadSampleDigit                *AxaiHwReadSampleDigit;
extern funcAxaiHwIsBufferEmpty                  *AxaiHwIsBufferEmpty;
extern funcAxaiHwIsBufferUpper                  *AxaiHwIsBufferUpper;
extern funcAxaiHwIsBufferLower                  *AxaiHwIsBufferLower;
extern funcAxaiExternalStartADC                 *AxaiExternalStartADC;
extern funcAxaiExternalStopADC                  *AxaiExternalStopADC;
extern funcAxaiExternalReadFifoStatus           *AxaiExternalReadFifoStatus;
extern funcAxaiExternalReadVoltage              *AxaiExternalReadVoltage;
extern funcAxaoInfoGetModuleNoOfChannelNo       *AxaoInfoGetModuleNoOfChannelNo;
extern funcAxaoInfoGetChannelCount              *AxaoInfoGetChannelCount;
extern funcAxaoSetRange                         *AxaoSetRange;
extern funcAxaoGetRange                         *AxaoGetRange;
extern funcAxaoSetMultiRange                    *AxaoSetMultiRange;
extern funcAxaoWriteVoltage                     *AxaoWriteVoltage;
extern funcAxaoWriteMultiVoltage                *AxaoWriteMultiVoltage;
extern funcAxaoReadVoltage                      *AxaoReadVoltage;
extern funcAxaoReadMultiVoltage                 *AxaoReadMultiVoltage;